<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_crashing_component</name>
  <version>0.16.2</version>
  <description>A component that crashes</description>
  <license>Apache License 2.0</license>
  <author email="esteve.fernandez@tier4.jp">Esteve Fernandez</author>
  <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
